# django-subcommands.py

./: .travis.yml  README.md  setup.cfg  setup.py
django_subcommands/: __init__.py
