# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-subcommands
version = 2019.03.13
url = https://github.com/looking-for-a-job/django-subcommands.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django subcommands

[options]
install_requires = 
	Django>1.0
	public
	setuptools
packages = 
	django_subcommands
